--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="menu-item">
                 <ul class="list-menu">
                     <li>
-                        <a href="https://www.facebook.com/thach.phamngoc.1650">
+                        <a href="#">
                             Sản phẩm
                         </a>
                     </li>
