--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop của Mạnh</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <script src="./script.js" defer></script>
-</head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Shop của Mạnh</title>
+        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+        <script src="./script.js" defer></script>
+    </head>
 <body onscroll="myFunction()">
     <div class="wrapper">
         <div class="menu-bar" id="menu">
@@ -16,12 +16,12 @@
                 <a href="#">
                     My <span>shop</span>
                 </a>
-            </div>
+            </div> 
             <div class="menu-item">
                 <ul class="list-menu">
                     <li>
                         <a href="#">
-                            Sản phẩm
+                            Sản phẩm    
                         </a>
                     </li>
                     <li>
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#">x
                             Về chúng tôi
                         </a>
                     </li>
@@ -44,6 +44,7 @@
             <div class="search">
                 <div class="giohang">
                     <a href="#">
+
                         <i class="fa-solid fa-cart-shopping"></i>
                         <span>0</span>
                     </a>
@@ -100,11 +101,11 @@
                         </div>
                     </div>
                     <div class="sanpham-tshirt">
-                        <img src="./images/sp6.webp" alt="">
+                        <img src="./images/sp10.webp" alt="">
                         <div class="content">
-                            <h3>Iphone 14 promax </h3>
-                            <span class="price">31.000.000đ</span>
-                            <p class="desc">máy cha cả xịnnnn </p>
+                            <h3>mec mới mua </h3>
+                            <span class="price">31.000.000.000đ</span>
+                            <p class="desc">xe mới mua chắc xịn xò lắm </p>
                             <button class="buy-now">Mua ngay</button>
                         </div>
                     </div>
@@ -158,9 +159,9 @@
                     <a href="#">Liên hệ</a>
                 </div>
                 <div class="column-right">
-                    <p> <span>Email:</span>  abc@gmail.com</p>
+                    <p> <span>Email:</span>  phamlemanh29082004@gmail.com</p>
                     <p> <span>Địa chỉ:</span> số 1 đường abc thành phố Vinh Nghệ An.</p>
-                    <p> <span>Số điện thoại:</span> 0123525782.</p>
+                    <p> <span>Số điện thoại:</span> 0347180346</p>
                 </div>
             </div>
         </div>
