--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                         </div>
                     </div>
                     <div class="sanpham-tshirt">
-                        <img src="./images/sp10.webp" alt="">
+                        <img src="./images/sp5.webp" alt="">
                         <div class="content">
-                            <h3>mec mới mua </h3>
-                            <span class="price">31.000.000.000đ</span>
-                            <p class="desc">xe mới mua chắc xịn xò lắm </p>
+                            <h3>Iphone 14promax </h3>
+                            <span class="price">31.000.000đ</span>
+                            <p class="desc">màu dark purple khá hiếm </p>
                             <button class="buy-now">Mua ngay</button>
                         </div>
                     </div>
