--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">x
+                        <a href="#">
                             Về chúng tôi
                         </a>
                     </li>
@@ -46,7 +46,7 @@
                     <a href="#">
 
                         <i class="fa-solid fa-cart-shopping"></i>
-                        <span>0</span>
+                        <span>0</span>__
                     </a>
                 </div>
                 <div class="search-icon">
