--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <div class="sanpham-tshirt">
                         <img src="./images/sp5.webp" alt="">
                         <div class="content">
-                            <h3>Iphone 14promax </h3>
-                            <span class="price">31.000.000đ</span>
+                            <h3>iphone </h3>
+                            <span class="price">31.000.000</span>
                             <p class="desc">màu dark purple khá hiếm </p>
                             <button class="buy-now">Mua ngay</button>
                         </div>
