--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="sanpham-tshirt">
                         <img src="./images/sp5.webp" alt="">
                         <div class="content">
-                            <h3>iphone </h3>
+                            <h3>Iphone 14 promax </h3>
                             <span class="price">31.000.000</span>
                             <p class="desc">màu dark purple khá hiếm </p>
                             <button class="buy-now">Mua ngay</button>
@@ -112,7 +112,7 @@
                     <div class="sanpham-tshirt">
                         <img src="./images/sp8.jpg" alt="">
                         <div class="content">
-                            <h3>máy svip</h3>
+                            <h3>Macbook pro</h3>
                             <span class="price">51.000.000  </span>
                             <p class="desc">máy mới mua chắc xịn </p>
                             <button class="buy-now">Mua ngay</button>
@@ -160,11 +160,11 @@
                 </div>
                 <div class="column-right">
                     <p> <span>Email:</span>  phamlemanh29082004@gmail.com</p>
-                    <p> <span>Địa chỉ:</span> số 1 đường abc thành phố Vinh Nghệ An.</p>
+                    <p> <span>Địa chỉ:</span> xom 4 hưng đạo hưng nguyên nghệ an </p>
                     <p> <span>Số điện thoại:</span> 0347180346</p>
                 </div>
             </div>
-        </div>
+        </div> 
     </div>
 </body>
 <div> </div>
