--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <li>
                         <a href="#">
                             Sản phẩm    
-                        </a>
                     </li>
                     <li>
                         <a href="#">
@@ -38,7 +37,6 @@
                         <a href="#">
                             Về chúng tôi
                         </a>
-                    </li>
                 </ul>
             </div>
             <div class="search">
@@ -101,11 +99,11 @@
                         </div>
                     </div>
                     <div class="sanpham-tshirt">
-                        <img src="./images/sp5.webp" alt="">
+                        <img src="./images/sp10.webp" alt="">
                         <div class="content">
-                            <h3>Iphone 14 promax </h3>
-                            <span class="price">31.000.000</span>
-                            <p class="desc">màu dark purple khá hiếm </p>
+                            <h3>Imec </h3>
+                            <span class="price">3.11.000.000</span>
+                            <p class="desc">xe xin </p>
                             <button class="buy-now">Mua ngay</button>
                         </div>
                     </div>
@@ -119,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row-3">
+                    <div class="row-3">
                     <div class="sanpham-tshirt">
                         <img src="./images/sp7.png" alt="">
                         <div class="content">
@@ -146,8 +144,8 @@
                             <p class="desc">áo thun form rộng nam</p>
                             <button class="buy-now">Mua ngay</button>
                         </div>
+                    </div> 
                     </div>
-                </div>
             </div>
         </div>
         <div class="footer">
@@ -157,6 +155,7 @@
                     <a href="#">Về chúng tôi</a>
                     <a href="#">Sản phẩm sale</a>
                     <a href="#">Liên hệ</a>
+                    <i class="fa-brands fa-facebook"></i></i>
                 </div>
                 <div class="column-right">
                     <p> <span>Email:</span>  phamlemanh29082004@gmail.com</p>
